# panties

./: README.md  pyproject.toml
panties-javascript/: README.md  package-lock.json  package.json  rollup.config.js  test.html  test.js
panties-javascript/src/: index.ts
panties-python/: __init__.py  client.py  hooks.py  state.py  test-panties.py  transport.py
panties-python/panties/: decorators.py  hooks.py  transport.py
panties-server/: .env.example  README.md  requirements.txt
panties-server/api/: urls.py  views.py
panties-server/config/: settings.py  urls.py
panties-server/core/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
panties-server/core/migrations/: 0001_initial.py
panties-server/templates/: base.html
panties-server/templates/account/: email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  signup.html
panties-server/templates/core/: error_confirm_delete.html  error_detail.html  error_list.html  member_confirm_delete.html  member_form.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html
server/: app.py
server/templates/: base.html  error_detail.html  project_detail.html  projects.html
